# msg-code-create

./: .gitignore  README.md  ROADMAP.md  compose.yaml  curl_output.json  package-lock.json
server/: .env.example  Dockerfile  README.md  chat_output.txt  english_names_output.txt  main.py  models.py  no_connection_output.txt  partial_params_output.txt  pyproject.toml  script_output.txt
server/agent/: core.py  tools.py
server/api_data/: .gitignore  README.md  fchg_8000105.xml  plan_8000105_251205_23.xml  plan_8000105_251205_23_formatted.xml  rchg_8000105.xml  station_Frankfurt.xml
server/data/: db_fv_stations.csv  graph_cache.json  plan_8000105_251206_23.xml  schema.sql  top_stations.json
server/examples/: journey_examples.py
server/models/: __init__.py  connection_schema.py  journey.py  leg.py  platform_info.py  real_time_status.py  route_option.py  station.py  stationChange.py  station_change.py  station_info.py  stop.py  train.py
server/routes/: __init__.py  chat.py  connections.py  example.py  message.py  travel.py
server/scripts/: calculate_connectivity.py  check_delays.py  check_english_names.py  check_station_match.py  check_stations.py  debug_all.py  generate_stuttgart_data.py  ingest_delays.py  repro_duplicates.py  reproduce_chat_params.py  reproduce_english_names.py  reproduce_issue.py  reproduce_no_connection.py  reproduce_partial_params.py  reproduce_via_issue.py  test_chat_output.txt  test_chat_via.py  test_hybrid.py  test_via.py
server/service/: __init__.py  bedrock_service.py  chat.py  config.py  connections.py  example_service.py  tools.py  (+11 more)
(+82 files in other folders)
