[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.123.10",
    "uvicorn>=0.38.0",
    "httpx>=0.27.0",
    "xmltodict>=0.13.0",
    "python-dotenv>=1.0.0",
    "boto3>=1.42.4",
    "requests>=2.32.5",
    "pydantic>=2.12.5",
    "typing>=3.10.0.0",
    "botocore>=1.42.4",
    "pathlib>=1.0.1",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
]
